integration bugfix z-index header

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -105,7 +105,7 @@ p {
   left: 0px;
   width: 100%;
   height: 44px;
-  z-index: 10; /* above content z-index=5 */
+  z-index: 50; /* above content z-index=5 */
   
   color: #FFF;
   background-color:#19171c;
